--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.test.database.replace=none
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
-spring.sql.init.data-locations=classpath:database/testData.sql
+#spring.sql.init.data-locations=classpath:database/.testData.sql
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
